--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,11 +7,14 @@
       <%= @item.name %>
     </h2>
     <div class='item-img-content'>
-      <%= image_tag @item.image ,class:"item-box-img" %>
+    <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
+    
+    <% if @item.purchase != nil %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
       </div>
+    <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
@@ -30,7 +33,7 @@
     <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
    <% elsif user_signed_in? %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+    <%= link_to '購入画面に進む', item_purchases_path(@item.id), class:"item-red-btn"%>
    <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
